<resources>
    <string name="app_name">APP SEM3</string>
    <string name="answer_4">Answer 4</string>
    <string name="submit">Submit</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_1">Answer 1</string>
    <string name="question">Question</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_score">Your Score</string>
</resources>